--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </li>
             <li>
               <a
-                href="#"
+                href="#categories"
                 class="text-white hover:text-white/90 font-semibold transition"
                 >Categories</a
               >
@@ -155,7 +155,7 @@
             data-recipe="pasta carbonara"
           >
             <img
-              src=""
+              src="p1.jpeg"
               alt="Classic Pasta Carbonara"
               class="w-full h-48 object-cover object-top"
             />
@@ -176,7 +176,7 @@
             data-recipe="lasagna"
           >
             <img
-              src="https://source.unsplash.com/400x300/?lasagna"
+              src="l1.jpeg"
               alt="Classic Lasagna"
               class="w-full h-48 object-cover object-top"
             />
@@ -195,7 +195,7 @@
             data-recipe="chicken alfredo"
           >
             <img
-              src="https://source.unsplash.com/400x300/?chicken,pasta"
+              src="ca.jpeg"
               alt="Chicken Alfredo"
               class="w-full h-48 object-cover object-top"
             />
@@ -210,8 +210,16 @@
         </div>
       </section>
 
-      <section>
-        <h3 class="text-2xl font-bold mb-6 text-gray-800">Recipe Categories</h3>
+      <section id="categories" class="mb-16">
+        <h3 class="text-2xl font-bold mb-6 text-gray-800 fade-in-up fade-in-up-delay-4">
+          Explore by Category
+        </h3>
+        <p class="text-gray-600 max-w-2xl mx-auto fade-in-up fade-in-up-delay-5 px-4 mb-6 py-4">
+          Browse our collection of recipes by category. Whether you're looking
+          for breakfast, lunch, dinner, or dessert, we have something for
+          everyone!
+        </p>
+        <!-- <h3 class="text-2xl font-bold mb-6 text-gray-800">Recipe Categories</h3> -->
         <div class="grid grid-cols-2 md:grid-cols-6 gap-6 justify-center">
           <a
             href="#"
@@ -413,7 +421,7 @@
             <form class="flex">
               <input
                 type="email"
-                placeholder="Your email address"
+                placeholder="Email "
                 class="px-4 py-2 rounded-l-lg text-gray-800 w-full border-none"
               />
               <button
