--- a/signin.html
+++ b/signin.html
@@ -55,7 +55,7 @@
         display: flex;
         flex-direction: column;
       }
-      h1,
+      
       h2,
       h3,
       h4 {
@@ -89,6 +89,7 @@
         transform: rotate(45deg);
       }
     </style>
+    <link rel="stylesheet" href="styles2.css">
   </head>
   <body>
     <header
@@ -102,16 +103,9 @@
       ></div>
       <div class="container mx-auto px-4 py-6 relative">
         <div class="flex justify-between items-center">
-          <a
-            href="https://readdy.ai/home/b0567bea-6536-4028-aafc-23d527329ba8/eae37660-6cec-4d93-a740-066456a0e440"
-            data-readdy="true"
-            class="text-2xl font-['Pacifico'] text-white hover:opacity-90 transition"
-            >logo</a
-          >
-          <a
-            href="index.html"
-            class="flex items-center text-white/90 hover:text-white transition group"
-          >
+          <h1 class="text-xl font-pacifico text-white drop-shadow-md">
+            Recipe Finder
+          </h1>
             <div
               class="w-8 h-8 flex items-center justify-center rounded-full bg-white/10 group-hover:bg-white/20 transition mr-2"
             >
