--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </li>
             <li>
               <a
-                href="#"
+                href="about.html"
                 class="text-white hover:text-white/90 font-semibold transition"
                 >About</a
               >
