--- a/signin.html
+++ b/signin.html
@@ -107,11 +107,12 @@
             Recipe Finder
           </h1>
             <div
-              class="w-8 h-8 flex items-center justify-center rounded-full bg-white/10 group-hover:bg-white/20 transition mr-2"
+              class="w-8 h-8 flex items-center justify-center rounded-full bg-white/10 group-hover:bg-white/20 transition mr-2 mx-auto px-10 "
             >
-              <i class="ri-arrow-left-line"></i>
+              <i class="ri-arrow-left-line "></i>
+              <a href="index.html"><p class="font-medium mx-auto px-4">Back to Recipes</p></a>
             </div>
-            <span class="font-medium">Back to Recipes</span>
+            
           </a>
         </div>
       </div>
