--- a/recipe.html
+++ b/recipe.html
@@ -164,7 +164,7 @@
               >
             </li>
             <li>
-              <a href="#" class="text-white hover:text-white/90 font-semibold transition"
+              <a href="about.html" class="text-white hover:text-white/90 font-semibold transition"
                 >About</a
               >
             </li>
